# iterativennsimple_extension

./: .gitmodules  LICENSE  README.md  pyproject.toml
copilot_test/: test.py
data/: README.md
huggingface_surgery/: .gitignore  pyproject.toml
huggingface_surgery/huggingface_surgery/: model_splitter.py
huggingface_surgery/notebooks/: 01-rcp-spying-on-a-model.ipynb  02-rcp-training.ipynb  03-rcp-falcon-exploration.ipynb  03a-rcp-one-step-falcon-exploration.ipynb  04-rcp-path-analysis.ipynb  05-rcp-train-on-paths.ipynb  06-rcp-newman-barger-correction.ipynb
huggingface_surgery/scripts/: .gitignore  do.sh  download_datasets_and_models.py  generate_paths.py  get_data.py  get_models.fish  get_models_small.fish  get_structure.py  train_and_analyze.py
inn_sequence/: utils.py
iterativennsimple_extension/: mycode.py
lm-evaluation-harness/: .gitignore  do_clean_eval.fish
notebooks/: 01-rcp-sample.ipynb  01-rcp-spying-on-a-model.ipynb  02-rcp-training.ipynb  03-rcp-falcon-exploration.ipynb  03a-rcp-one-step-falcon-exploration.ipynb  04-rcp-path-analysis.ipynb
scripts/: README.md  generate_paths.py  get_models_test.fish  no_gpu.yaml
template/: pyproject.toml
tests/: test_mycode.py
